# thalia

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  conanfile.txt  grammar.ebnf  install.sh  project.clj  setup.sh
examples/: main.asm  main.th  test.asm  test.c1  test.th  test1.asm  test1.th
examples/example1/src/: main.th
examples/example3/: compile.json
examples/example4/: .gitignore
examples/example4/src/: main.th
resources/: grammar.ebnf
resources/stdlib/src/: str.asm  sys.asm
src/: main.cpp
src/lexer/: content.cpp  content.hpp  exception.cpp  exception.hpp  lexer.cpp  lexer.hpp  token.hpp
src/nasm/: translator.cpp  translator.hpp
src/parser/: ast_deallocator.cpp  ast_deallocator.hpp  ast_view.cpp  ast_view.hpp  ast_visitor.hpp  exception.hpp  exprs.hpp  parser.cpp  parser.hpp  stmts.hpp
src/thalia/: ast.clj  cfg.clj  config.clj  core.clj  fs.clj  io.clj  json.clj  lexer.clj  nasm.clj  parser.clj  token.clj
src/thalia/parser/: core.clj  decl.clj  expr.clj  pattern.clj  stmt.clj
stdlib/: Makefile
stdlib/src/: io.asm  rand.asm
test/thalia/: core_test.clj
